apply clients package

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -306,6 +306,8 @@ COM_JOOMLAQUIZ_ENABLE_SLIDE_PANEL="Enable results panel:"
 COM_JOOMLAQUIZ_WILL_BE_ON_THE="Select the check box to display the results panel to users when they take the quiz. Any time during the quiz the user can click this link and view all the quiz questions and the result for the ones already answered"
 COM_JOOMLAQUIZ_RESULTS_BY_CATEGORIES="Show results by categories:"
 COM_JOOMLAQUIZ_BE_INTEGRATED="Select the check box to group the results by question categories and show points received for every category"
+COM_JOOMLAQUIZ_RESULTS_BY_TAGS_LABEL="Show results by tags:"
+COM_JOOMLAQUIZ_RESULTS_BY_TAGS_DESC="Select the check box to group the results by question tags and show points received for every tag"
 COM_JOOMLAQUIZ_SHOW_QUESTION_X_LABEL="Show 'Question X of Y' message:"
 COM_JOOMLAQUIZ_SHOW_QUESTION_X_DESC="Show 'Question X of Y' message"
 COM_JOOMLAQUIZ_SHOW_POINT_VALUE_LABEL="Show 'Point value X' message:"
@@ -362,9 +364,16 @@ COM_JOOMLAQUIZ_NUMBER_OF_QUESTIONS="Number of questions(for random questions):"
 COM_JOOMLAQUIZ_RANDOM_QUESTIONS="Random questions"
 COM_JOOMLAQUIZ_TAKEN_FROM_THE="Select this option to take random questions from the Question Pool. Then specify the number of questions to be taken. Note: if the quiz itself has 5 questions and 25 questions are taken from the Question Pool, the quiz will have 30 questions in total"
 COM_JOOMLAQUIZ_BY_CATEGORIES="By categories:"
+COM_JOOMLAQUIZ_BY_TAGS="By tags:"
 COM_JOOMLAQUIZ_BY_CATEGORIES_LABEL="By categories:"
 COM_JOOMLAQUIZ_BY_CATEGORIES_DESC="By categories"
 COM_JOOMLAQUIZ_LIKE_THE_QUESTIONS="Select this option to take from the Question Pool only questions from particular categories. Then specify the number of questions to be taken from each category"
+COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_LABEL="Quantity by tags"
+COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_DESC="Please indicate the number of questions for each tag."
+COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_OPTIONS_QTY_LABEL="Quantity"
+COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_OPTIONS_QTY_DESC="Quantity by tags"
+COM_JOOMLAQUIZ_QUESTIONS_UPLOADQUESTIONS_CSV_TAG1="tag1|tag2"
+COM_JOOMLAQUIZ_QUESTIONS_UPLOADQUESTIONS_CSV_TAG2="tag2|tag4"
 COM_JOOMLAQUIZ_METADATA_INF="Metadata"
 COM_JOOMLAQUIZ_PAGE_META_DESCR="Select the check box to replace the quiz page meta-description with the following meta-description"
 COM_JOOMLAQUIZ_KEYWORDS="Keywords:"
@@ -494,6 +503,7 @@ COM_JOOMLAQUIZ_QUESTION_DETAILS="Answer Options"
 COM_JOOMLAQUIZ_QUESTION_CATEGORY2="Question Category:"
 COM_JOOMLAQUIZ_ATTEMPTS2="Attempts:"
 COM_JOOMLAQUIZ_PENALTY="Penalty %:"
+COM_JOOMLAQUIZ_ORDERING="Ordering:"
 COM_JOOMLAQUIZ_RANDOMIZE_ANSWERS="Shuffle answers:"
 COM_JOOMLAQUIZ_PARTIAL_SCORE="Partial Score:"
 COM_JOOMLAQUIZ_TITLE_FOR_TRUE="Title for 'true' option:"
@@ -519,6 +529,7 @@ COM_JOOMLAQUIZ_QUESTION_CATEGORY="Question Category:"
 COM_JOOMLAQUIZ_POINTS="Points:"
 COM_JOOMLAQUIZ_ATTEMPTS="Attempts:"
 COM_JOOMLAQUIZ_PENALTY="Penalty %:"
+COM_JOOMLAQUIZ_ORDERING="Ordering:"
 COM_JOOMLAQUIZ_QUESTION_OPTIONSANSWERS="Question options (answers)"
 COM_JOOMLAQUIZ_BLANK="Blank"
 COM_JOOMLAQUIZ_CODE_FORQUESTION=", code for question text:"
@@ -616,7 +627,6 @@ COM_JOOMLAQUIZ_FONTSIZE="Font-size"
 COM_JOOMLAQUIZ_OFFSET="Offset"
 COM_JOOMLAQUIZ_TEXT_FIELD="Text field"
 COM_JOOMLAQUIZ_SHADOW="Shadow"
-COM_JOOMLAQUIZ_TEXT_X_ALIGN_CENTER="Text X align center"
 COM_JOOMLAQUIZ_TEXT_X="Text X"
 COM_JOOMLAQUIZ_TEXT_Y="Text Y"
 COM_JOOMLAQUIZ_FONT_SIZE="Font size"
@@ -842,6 +852,7 @@ COM_JOOMLAQUIZ_LP_SAVED="Learning path was saved"
 COM_JOOMLAQUIZ_LP="Learning path"
 COM_JOOMLAQUIZ_SELECT_QUESTION_TYPE="- Select Question type -"
 COM_JOOMLAQUIZ_NO_CATEGORY=" - No Category - "
+COM_JOOMLAQUIZ_NO_TAG=" - No Tag - "
 COM_JOOMLAQUIZ_ENTER_QUESTION="Enter question text here"
 COM_JOOMLAQUIZ_DO_NOT_ADD="Do not add Divider line after this question"
 COM_JOOMLAQUIZ_ADD_SEPARATOR="Add Divider line after this question"
