--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -8,6 +8,7 @@ COM_QUIZ_MES_NOTVAIL="Sorry, this option is not available now."
 COM_QUIZ_HEADER_FIN_RESULTS="Quiz Results"
 COM_QUIZ_RES_MES_SCORE="Your score:"
 COM_QUIZ_RES_CAT_SCORE="Score by categories:"
+COM_QUIZ_RES_TAG_SCORE="Score by tags:"
 COM_QUIZ_RES_MES_PAS_SCORE="Passing score:"
 COM_QUIZ_RES_MES_TIME="Elapsed time:"
 COM_QUIZ_HEADER_FIN_MESSAGE="Quiz Message"
