initial commit custom 712

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1128,3 +1128,18 @@ COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
 
 COM_JOOMLAQUIZ_SET_DEFAULT="Set default question's fields"
+
+#custom712
+COM_JOOMLAQUIZ_QUIZ_LIMIT_BY_IP_LABEL="Limit access on the IP address"
+COM_JOOMLAQUIZ_QUIZ_LIMIT_BY_IP_DESC="Limit access on the IP address"
+COM_JOOMLAQUIZ_QUIZ_ATTEMPTS_FROM_IP_LABEL="Qty attempts from each IP"
+COM_JOOMLAQUIZ_QUIZ_ATTEMPTS_FROM_IP_DESC="Qty attempts from each IP"
+COM_JOOMLAQUIZ_QUIZ_CONGRATULATIONS_EMAIL_LABEL="Qty congratulations emails after a quiz"
+COM_JOOMLAQUIZ_QUIZ_CONGRATULATIONS_EMAIL_DESC="If 0 or empty - the option is disabled, emails are not sent."
+COM_JOOMLAQUIZ_QUIZ_EMAIL_CONGRATULATION_LABEL="Description of congratulation email"
+COM_JOOMLAQUIZ_QUIZ_EMAIL_CONGRATULATION_DESC="Description of congratulation email"
+COM_JOOMLAQUIZ_QUIZ_EMAIL_PARTICIPANT_LABEL="Description of participant email"
+COM_JOOMLAQUIZ_QUIZ_EMAIL_PARTICIPANT_DESC="Description of participant email"
+COM_JOOMLAQUIZ_QUIZ_EDIT_TAB_CUSTOM="Custom Settings"
+
+
