--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -273,3 +273,6 @@ COM_JOOMLAQUIZ_MEMORY_NOTSTARTED="Are you sure you want to give up without even 
 
 COM_JOOMLAQUIZ_LPS_NOT_AVAILABLE="None learning path is available"
 COM_JOOMLAQUIZ_LPS_MENU_ITEM="List of all available learning paths"
+
+#custom712
+COM_QUIZ_CUSTOM_NOT_AVAILABLE_BY_IP="<font color=red><strong>This quiz is not available.</strong></font>"
