custom 716 - initial commit

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -601,7 +601,7 @@ COM_JOOMLAQUIZ_CERTIFICATE_DETAILS="Certificate Details"
 COM_JOOMLAQUIZ_AFTER_YOU_HAVE_UPLOADED="* After you have uploaded a new picture, please reload the page to refresh pictures list."
 COM_JOOMLAQUIZ_IF_YOU_WANT_TOUPLOAD="* If you want to upload a lot of pictures use FTP and upload them into '<em>images/joomlaquiz/images</em>'."
 COM_JOOMLAQUIZ_YOU_CAN_USE_THEFOLLOWING="* You can use the following constants:
-								'#name#' and '#username#' - to enter name and username of student,#course# - to enter name of quiz,
+								'#name#' and '#username#' - to enter name and username of student ; <b>#dni#</b>; #course# - to enter name of quiz,
                                                                 '#points#' - to enter the score user received,
 								'#reg_answer#' - to enter the score user received and its percentage out of the maximum allowed,
 								'#date#' - to enter current date.
