--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1119,3 +1119,10 @@ COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_LABEL="E-mail PDF Certificate"
 COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_DESC="From the drop-down list, select the appropriate option for e-mailing PDF Certificate, or leave it disabled"
 COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_OPTION0="- disable this option -"
 COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_OPTION1="- enable this option -"
+
+#custom 730
+COM_JOOMLAQUIZ_QUIZ_CUSTOM_TAB_TITLE="Custom options"
+COM_JOOMLAQUIZ_QUIZ_CUSTOM_QUIZ_TYPE_LABEL="Quiz type"
+COM_JOOMLAQUIZ_QUIZ_CUSTOM_QUIZ_TYPE_DESC="Quiz type"
+COM_JOOMLAQUIZ_QUIZ_CUSTOM_QUIZ_TYPE_OPTION_0="Test Question Quizzes"
+COM_JOOMLAQUIZ_QUIZ_CUSTOM_QUIZ_TYPE_OPTION_1="Interactive Cases"
