--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -276,3 +276,6 @@ COM_QUIZ_MES_EMAIL_PDF_CERTIFICATE_OK="<span class=\"msg_email_sent_success\">E-
 COM_QUIZ_MES_EMAIL_PDF_CERTIFICATE_FAIL="Failed to send e-mail"
 COM_QUIZ_EMAIL_PDF_CERTIFICATE_SUBJECT="Certificate of quiz"
 COM_QUIZ_EMAIL_PDF_CERTIFICATE_MESSAGE="Certificate of passing the quiz in the attached file."
+
+#custom 730
+COM_QUIZ_QUESTION_NUMBER_INTERACTIVE_TEXT="Step {X} of {Y}"
