--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1127,3 +1127,7 @@ COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
 
 COM_JOOMLAQUIZ_SET_DEFAULT="Set default question's fields"
+
+;custom 758 start
+COM_JOOMLAQUIZ_QUESTION_CUSTOM_CSS_CLASS_LABEL="Custom CSS class of the question's container"
+COM_JOOMLAQUIZ_QUESTION_CUSTOM_CSS_CLASS_DESC="Custom CSS class of the question's container."
