custom 753 - initial commit

--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -70,6 +70,7 @@ COM_LPATH_NEXT_QUIZ="Next step"
 COM_QUIZ_TRY_AGAIN="Take this quiz again"
 COM_JQ_BACK_TO_RESULTS="Back to results"
 COM_QUIZ_FIN_BTN_CERTIFICATE="Certificate"
+COM_QUIZ_FIN_BTN_CERTIFICATE_SHAREPOINT="Save Certificate to Sharepoint"
 COM_FIN_BTN_PRINT="PDF Report"
 COM_QUIZ_FIN_BTN_EMAIL="E-mail"
 COM_QUIZ_FIN_BTN_REVIEW="Review"
