initial commit custom 771

--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -173,6 +173,7 @@ COM_QUIZ_PDF_QTIME="on this quiz"
 COM_QUIZ_PDF_PASQUIZ="has passed the quiz"
 COM_QUIZ_PDF_NPASSQUIZ="has not passed the quiz"
 COM_QUIZ_PDF_ANSWER="Your answer: "
+COM_QUIZ_PDF_CORRECT_ANSWER="Correct answer: "
 COM_QUIZ_PDF_RIGHT="correct"
 COM_QUIZ_PDF_WRONG="incorrect"
 COM_QUIZ_PDF_PASQUIZ_BOLD="has <strong>passed</strong> the quiz"
