Fixed calculation and display of the delay time before retrying the quiz.

--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -3,7 +3,6 @@
 ; @Copyright Copyright (C) JoomPlace, www.joomplace.com
 ; @license GNU/GPL http://www.gnu.org/copyleft/gpl.html
 
-
 COM_QUIZ_MES_NOTVAIL="Sorry, this option is not available now."
 COM_QUIZ_HEADER_FIN_RESULTS="Quiz Results"
 COM_QUIZ_RES_MES_SCORE="Your score:"
@@ -103,7 +102,7 @@ COM_NOT_SUBSCRIBED="<font color=red><strong>This is a paid quiz. If you have pur
 COM_ACCESS_EXPIRED="<font color=red><strong>Your access has expired.</strong></font>"
 COM_ACCESS_NO_ATTEMPTS="<font color=red><strong>You have no attempts left to pass this quiz.</strong></font>"
 COM_QUIZ_MINUTES="minute(s)"
-COM_QUIZ_COMEBACK_LATER="<font color='red'><strong>You have just taken this quiz. You can try again in {text}</strong></font>"
+COM_QUIZ_COMEBACK_LATER="<font color='red'><strong>You have just taken this quiz. You can try again in %s</strong></font>"
 COM_QUIZ_ALREADY_TAKEN="<font color=red><strong>You have already taken this quiz.</strong></font>"
 COM_QUIZ_ALREADY_PASSED="<font color=red><strong>You have already passed this quiz successfully.</strong></font>"
 COM_QUIZ_REG_ONLY="<font color=red><strong>This quiz is for registered users only.</strong></font>"
@@ -270,3 +269,8 @@ COM_JOOMLAQUIZ_SHORTCODE_ADJUSTER="89"
 
 COM_JOOMLAQUIZ_LPS_NOT_AVAILABLE="None learning path is available"
 COM_JOOMLAQUIZ_LPS_MENU_ITEM="List of all available learning paths"
+
+COM_JOOMLAQUIZ_QUIZ_WAIT_TIME_DAYS=" day(s)"
+COM_JOOMLAQUIZ_QUIZ_WAIT_TIME_HOURS=" hour(s)"
+COM_JOOMLAQUIZ_QUIZ_WAIT_TIME_MINUTES=" minute(s)"
+COM_JOOMLAQUIZ_QUIZ_WAIT_TIME_SECONDS=" second(s)"
