--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -102,7 +102,7 @@ COM_NOT_SUBSCRIBED="<font color=red><strong>This is a paid quiz. If you have pur
 COM_ACCESS_EXPIRED="<font color=red><strong>Your access has expired.</strong></font>"
 COM_ACCESS_NO_ATTEMPTS="<font color=red><strong>You have no attempts left to pass this quiz.</strong></font>"
 COM_QUIZ_MINUTES="minute(s)"
-COM_QUIZ_COMEBACK_LATER="<font color='red'><strong>You have just taken this quiz. You can try again in {text}</strong></font>"
+COM_QUIZ_COMEBACK_LATER="<font color='red'><strong>You have just taken this quiz. You can try again in %s</strong></font>"
 COM_QUIZ_ALREADY_TAKEN="<font color=red><strong>You have already taken this quiz.</strong></font>"
 COM_QUIZ_ALREADY_PASSED="<font color=red><strong>You have already passed this quiz successfully.</strong></font>"
 COM_QUIZ_REG_ONLY="<font color=red><strong>This quiz is for registered users only.</strong></font>"
@@ -273,3 +273,8 @@ COM_JOOMLAQUIZ_MEMORY_NOTSTARTED="Are you sure you want to give up without even 
 
 COM_JOOMLAQUIZ_LPS_NOT_AVAILABLE="None learning path is available"
 COM_JOOMLAQUIZ_LPS_MENU_ITEM="List of all available learning paths"
+
+COM_JOOMLAQUIZ_QUIZ_WAIT_TIME_DAYS=" day(s)"
+COM_JOOMLAQUIZ_QUIZ_WAIT_TIME_HOURS=" hour(s)"
+COM_JOOMLAQUIZ_QUIZ_WAIT_TIME_MINUTES=" minute(s)"
+COM_JOOMLAQUIZ_QUIZ_WAIT_TIME_SECONDS=" second(s)"
