information banners have been added to the dashboard of the component in the admin panel

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1093,7 +1093,6 @@ JQUIZ_MANAGE_COMPONENT_DESC="Access Global Results from FE"
 COM_JOOMLAQUIZ_INSERT_QUIZ_TAG_TITLE="Insert JoomlaQuiz"
 COM_JOOMLAQUIZ_COPY_ANSWER_TO_QUIZ_ERROR="Answer copy error";
 
-
 COM_JOOMLAQUIZ_CURRENT_QUESTION_REPORT="Current Questions Reports"
 COM_JOOMLAQUIZ_PROGRESS="Progress"
 COM_JOOMLAQUIZ_TOTAL_TIME="	Total time (m)"
@@ -1118,7 +1117,6 @@ COM_JOOMLAQUIZ_INSERT_QUIZ_BTN_CANCEL="Cancel"
 COM_JOOMLAQUIZ_INSERT_QUIZ_BTN_INSERT="Insert"
 COM_JOOMLAQUIZ_INSERT_QUIZ_LABEL="Select quiz"
 
-
 COM_QUIZ_ALREADY_PASSED="You have already passed this quiz."
 COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
 COM_JOOMLAQUIZ_ONE_TIME_LABEL="Hide passed quizzes:"
@@ -1127,3 +1125,7 @@ COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
 
 COM_JOOMLAQUIZ_SET_DEFAULT="Set default question's fields"
+
+COM_JOOMLAQUIZ_ADMIN_BANNER_SUPPORT="Need assistance?<br /><br />Support can be obtained on a paid basis. Contact us at <a href="mailto:support@joomplace.com"><b>support@joomplace.com</b></a> with any questions or concerns and we’ll be happy to help.<br /><br /><a href=\"https://www.joomplace.com/support-policy.html\" target=\"_blank\" rel=\"noopener noreferrer\"><b>Support Policy </b></a>"
+COM_JOOMLAQUIZ_ADMIN_BANNER_DEVELOPMENT="Lacking any features? We can customize the component so it’s tailored precisely to your needs.<br /><br />Our developers are recognized by the world Joomla community and know the inner workings of this CMS thoroughly enough to further improve it and extend its capabilities.<br /><br /><a href=\"https://www.joomplace.com/contact-us.html\" target=\"_blank\" rel=\"noopener noreferrer\"><b>Contact us</a></b> and we’ll find a solution."
+COM_JOOMLAQUIZ_ADMIN_BANNER_DONATE="This extension is free. We hope you enjoy it.<br /><br />We are striving to provide great support and continuously working on fixing bugs and adding new features.<br /><br />You can help us creating new free extensions and improving old ones by making a donation <a href=\"https://www.joomplace.com/donate.html\" target=\"_blank\" rel=\"noopener noreferrer\"><b>here</b></a>."
