improved the Question Pool tab of the quiz settings: added dependencies for displaying the relevant set of fields depending on the selected Question Pool type

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -363,6 +363,8 @@ COM_JOOMLAQUIZ_TAKEN_FROM_THE="Select this option to take random questions from 
 COM_JOOMLAQUIZ_BY_CATEGORIES="By categories:"
 COM_JOOMLAQUIZ_BY_CATEGORIES_LABEL="By categories:"
 COM_JOOMLAQUIZ_BY_CATEGORIES_DESC="By categories"
+COM_JOOMLAQUIZ_HEAD_CATEGORY_LABEL="Head Category"
+COM_JOOMLAQUIZ_HEAD_CATEGORY_DESC="Select a head category"
 COM_JOOMLAQUIZ_LIKE_THE_QUESTIONS="Select this option to take from the Question Pool only questions from particular categories. Then specify the number of questions to be taken from each category"
 COM_JOOMLAQUIZ_METADATA_INF="Metadata"
 COM_JOOMLAQUIZ_PAGE_META_DESCR="Select the check box to replace the quiz page meta-description with the following meta-description"
