fixed deletion of completed questions in the admin panel

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1000,6 +1000,10 @@ COM_JOOMLAQUIZ_NOTIFICMES3=" to help improve the component. Thank you!"
 COM_JOOMLAQUIZ_CREATEHOTSPOT="Create/Edit hotspot"
 COM_JOOMLAQUIZ_CREATEEXTHOTSPOT_CLOSE_CONTOUR="When creating a hotspot, it is necessary to close the contour by clicking on the first point as the last point."
 
+COM_JOOMLAQUIZ_QUESTIONS_DELETE_COMPLITED_BTN_DELETE="Delete"
+COM_JOOMLAQUIZ_QUESTIONS_DELETE_COMPLITED_BTN_CANCEL="Cancel"
+COM_JOOMLAQUIZ_QUESTIONS_DELETE_COMPLITED_MSG="Questions with IDs %s have been completed. Are you sure you want to delete them?"
+
 COM_JOOMLAQUIZ_CREATEANEWONE="Make a new one?"
 COM_JOOMLAQUIZ_NOQUIZZESCREATED="No quizzes created. "
 COM_JOOMLAQUIZ_NOQUIZCATCREATED="No quizzes categories created. "
