--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -141,6 +141,7 @@ COM_QUIZ_SUBMIT="SUBMIT"
 COM_LAST_MESSAGE="Attention! There is one non-answered question left."
 COM_QUIZ_CONTINUE="Continue"
 COM_QUIZ_BACK="Back"
+COM_QUIZ_QUIT="QUIT"
 COM_QUIZ_FINISH="FINISH"
 COM_QUIZ_BTN_PANEL="Results panel"
 COM_QUIZ_AUTHOR_PREFIX="Author:"
