added the ability to upload jpeg images

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -799,7 +799,7 @@ COM_JOOMLAQUIZ_SAVE="Save"
 COM_JOOMLAQUIZ_FILE_MUST="File must only contain alphanumeric characters and no spaces please."
 COM_JOOMLAQUIZ_IMAGE="Image "
 COM_JOOMLAQUIZ_ALREADY_EXISTS=" already exists."
-COM_JOOMLAQUIZ_ACCEPTED_FILES="The file must be gif, png, jpg or bmp"
+COM_JOOMLAQUIZ_ACCEPTED_FILES="The file must be gif, png, jpg, jpeg or bmp"
 COM_JOOMLAQUIZ_UPLOAD_OF="Upload of "
 COM_JOOMLAQUIZ_FAILED=" failed"
 COM_JOOMLAQUIZ_SUCCESSFUL=" successful"
