--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -603,13 +603,13 @@ COM_JOOMLAQUIZ_CERTIFICATE_DETAILS="Certificate Details"
 COM_JOOMLAQUIZ_AFTER_YOU_HAVE_UPLOADED="* After you have uploaded a new picture, please reload the page to refresh pictures list."
 COM_JOOMLAQUIZ_IF_YOU_WANT_TOUPLOAD="* If you want to upload a lot of pictures use FTP and upload them into '<em>images/joomlaquiz/images</em>'."
 COM_JOOMLAQUIZ_YOU_CAN_USE_THEFOLLOWING="* You can use the following constants:
-								'#name#' and '#username#' - to enter name and username of student,#course# - to enter name of quiz,
-                                                                '#points#' - to enter the score user received,
-								'#reg_answer#' - to enter the score user received and its percentage out of the maximum allowed,
-								'#date#' - to enter current date.
-								Also you can use date formats, ex.- '#date(Y-m-d)#' outputs '2007-01-01'; '#date(d F Y)#' outputs '01 January 2007'. See our help for more details.
-								<br />
-								To insert a value of any CB field add # before and after field's name, e.g. for firstname use '#firstname#'.<br />The necessary info (name, surname etc.) for anonymous users will be taken from the data entered before taking a quiz, provided that these fields are defined in the quiz description section."
+                                        '#name#' and '#username#' - to enter name and username of student,#course# - to enter name of quiz,
+                                        '#bridename#' and '#groomname#' - to enter names of bride and groom,
+                                        '#reg_answer#' - to enter the score user received and its percentage out of the maximum allowed,
+                                        '#date#' - to enter current date.
+                                        Also you can use date formats, ex.- '#date(Y-m-d)#' outputs '2007-01-01'; '#date(d F Y)#' outputs '01 January 2007'. See our help for more details.
+                                        <br />
+                                        To insert a value of any CB field add # before and after field's name, e.g. for firstname use '#firstname#'.<br />The necessary info (name, surname etc.) for anonymous users will be taken from the data entered before taking a quiz, provided that these fields are defined in the quiz description section."
 COM_JOOMLAQUIZ_TEXT_ALIGN="Text align"
 COM_JOOMLAQUIZ_TEXT_SHADOW="Text shadow"
 COM_JOOMLAQUIZ_COORDINATE_X="Coordinate x"
@@ -1037,7 +1037,7 @@ COM_JOOMLAQUIZ_HOTSPOT_CONVERTER="Convert Hotspot"
 
 COM_JOOMLAQUIZ_DELETE_FLAGS="Reset Flags"
 COM_JOOMLAQUIZ_FLAG_QUESTIONS="Flag CSV"
-COM_JOOMLAQUIZ_YOU_CAN_DEFINE="<strong>You can define the fields for the users to enter their name and e-mail by inserting tags #name#, #surname#, #email# into the quiz description</strong><br/><br/>"
+COM_JOOMLAQUIZ_YOU_CAN_DEFINE="<strong>You can define the fields for the users to enter their name and e-mail by inserting tags #name#, #surname#, #email# AND #bride#, #groom# into the quiz description</strong>"
 COM_JOOMLAQUIZ_HIDE_FEEDBACK="Hide feedback if the user fails the quiz:"
 COM_JOOMLAQUIZ_HIDE_FEEDBACK_DESC="This option will be available if there are several attempts set"
 COM_JOOMLAQUIZ_SHOW_SOCIAL_BUTTONS="Show social share buttons:"
