--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -231,6 +231,10 @@ COM_JOOMLAQUIZ_DEFINE_VALID_EMAIL="Input correct email please!"
 COM_JOOMLAQUIZ_INPUT_USER_NAME="Input your name: "
 COM_JOOMLAQUIZ_INPUT_USER_SURNAME="Input your surname: "
 COM_JOOMLAQUIZ_INPUT_USER_EMAIL="Input your email: "
+COM_JOOMLAQUIZ_INPUT_BRIDE_NAME="Input bride name: "
+COM_JOOMLAQUIZ_INPUT_GROOM_NAME="Input groom name: "
+COM_JOOMLAQUIZ_DEFINE_BRIDE_NAME="Define bride name, please!"
+COM_JOOMLAQUIZ_DEFINE_GROOM_NAME="Define groom name, please!"
 COM_JQ_CERTIFICATE="Certificate"
 COM_JOOMLAQUIZ_DOWNLOAD="Download"
 COM_JOOMLAQUIZ_FE_NO_RIGHTS_VIEW_QUIZ="You are not allowed to access the quiz."
